--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
+crispy-bootstrap4==2022.1
 Django==3.2.3
 django-crispy-forms==1.14.0
 django-mathfilters==1.0.0
+Pillow==9.5.0
 pytz==2022.4
 sqlparse==0.4.3
-crispy_bootstrap4
-pillow==9.5.0
+tzdata==2023.3
